syntax = "proto3";
package eventmessages;

message Hash {
    bytes hashValue = 1;
}

message ExternalId {
    bytes binaryValue = 1;
}

message Content {
    bytes binaryValue = 1;
}

message Signature {
    bytes publicKey = 1;
    bytes signature = 2;
}

message TransAddress {
    uint64 amount = 1;
    Hash address = 2;
}


message Error {
    string message = 1;
    string source = 2;
}